--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,128 @@
 body {
+  margin:0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(236, 237, 241);
+}
+.wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  margin-bottom:30px;
+}
+.leftside {
+  margin:5px;
+  background-color: rgb(204, 204, 228);
+  width: 15%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 20px;
+  gap:20px;
+  box-shadow: 5px 10px grey;
+}
+.rightside {
+  background-color: rgba(72, 113, 189, 0.456);
+  width: 55%;
+  padding: 20px;
+  margin:5px;
+  box-shadow: 5px 10px grey;
+}
+.icons {
+  cursor: pointer;
+}
+.instagram {
+  margin-left:20px;
+  margin-right:20px;
+}
+ion-icon {
+  color: darkblue;
+}
+.photo {
+  height: 140px;
+  width: 140px;
+  background-image: url("./dogface.jpg");
+  border-radius: 20%;
+  background-size: cover;
+  margin-top: 20px;
+}
+.job {
+  list-style: none;
+}
+.aboutme {
+  text-align: justify;
+  text-justify: inter-word;
+  padding-bottom: 5px;
+}
+.contacts {
+  display: flex;
+  flex-direction: column;
+  gap:15px;
+  padding:15px;
+  border:rgb(163, 158, 158) 2px solid;
+}
+.education {
+  border-bottom: black 5px solid;
+}
+.text {
+  font-size:15px;
+  padding-left:50px;
+  font-style: italic;
+}
+h4 { font-weight:normal; }
+.work {
+  border-bottom: black 5px solid;
+}
+h2 {
+  color:rgba(28, 48, 104, 0.793)
+}
+.container {
+  width: 90%;
+  background-color: white;
+}
+.html {
+  width: 50%;
   background-color: blue;
 }
-.flex {
-  display: flex;
-  min-height: 50vh;
-}
-.right-bottom {
-  display: flex;
-  width: 100%;
-}
-.left,
-.right {
+.CSS {
   width: 50%;
+  background-color: purple;
 }
-.item {
-  background-color: red;
-  margin: 10px;
-  width: 100%;
-  flex:1;
+.javascript {
+  width: 5%;
+  background-color: yellow;
 }
-.right {
-  display:flex;
-  flex-wrap: wrap;
-  width: 50%;
+.python {
+  width: 0%;
+  background-color: black;
 }
-.left {
-  width: 50%;
-}
-.right-top {
-  width: 100%;
+
+@media screen and (max-width: 600px) {
+  body {
+    margin:0;
+  }
+.wrapper{
   display: flex;
-
+  flex-direction: column;
+  align-items: center;
 }
-.left {
-  display: flex;
+.leftside {
+  width: 80%;
 }
-
-.grid {
-  display: grid;
-  grid-template-columns:1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
-  min-height:50vh;
-  margin:10px;
+.rightside {
+  width:80% ;
 }
-.gridas {
-  background-color: rgb(194, 64, 140);
-  grid-column:1/3;
-  grid-row:1/5;
-  
-  
+.aboutme {
+  display:none;
+  }
+.education {
+  display: none;
 }
-.grid2 {
-  background-color: rgb(15, 29, 29);
-  grid-column:3/5;
-  grid-row:1/3;
-  
+h2 {
+  text-align: center;
 }
-.gri{
-  background-color: rgb(117, 147, 185);
-  grid-column:3/4;
-  grid-row:3/5;
-  
-}
-.gr{
-  background-color: antiquewhite;
-  grid-column:4/5;
-  grid-row:3/5;
-  
 }
 
 
-  
